// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TimePoint 1`] = `
<div>
  <div
    class="time-point"
  >
    9:55 PM
  </div>
</div>
`;

exports[`renders TimePoint with trip update 1`] = `
<div>
  <div
    class="time-point"
  >
    <div
      class="small"
    >
      <strike
        class="text-muted"
      >
        9:55 PM
      </strike>
    </div>
    <div>
      <strong
        class="text-dark"
      >
        9:59 PM
      </strong>
    </div>
  </div>
</div>
`;
